[package]
name = "scylla_mapping"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
catalytic = "0.1"
catalytic_table_to_struct = "0.1"

[dependencies]
catalytic = "0.1"
catalytic_macro = "0.1"
scylla = "0.3"
tokio = "1"
tracing = "0.1"
tracing-subscriber = "0.2"